In process of fixing tests